# spleeterpp

./: CMakeLists.txt
src/spleeter/: CMakeLists.txt
src/spleeter_common/: CMakeLists.txt
src/spleeter_filter/: CMakeLists.txt
